# immediatec

./: .gitattributes  .gitignore  README.md  manifest  pigpio.v
src/: ARTISTIC  COPYING  DemoBox  DummyPPLC  ICMake  ICServer  Makefile  Makefile.in  Mdiff  Msg.pm  README  README.RPi  README.tpl  Readme_develop  bar.ic  bar.sav  bar.vcd  barc.ica  barx.sav  barx.vcd  bcm2835.c  bcm2835.h  cexe.h  cexe_t.c  comp.h  comp.pl  comp.sed  comp.tab.c  comp.tab.h  comp.y  configure  configure.in  cons.tab.c  cons.tab.h  cons.y  const.c  demo.ic  genr.c  goserver.go  gram.h  (+112 more)
src/AuxTools/: AuxTools.v  Mdiff  Readme_develop  filetype.vim  filter_iC2toiC3  ic.ssh  ic.vim  im  m  mklst  mkpp  mkv  ml  mm  mo  mp  mpv  my  mz  saveV  saveX  tt  tx  update  wulff.vim
src/Test0/: Test0.v  a0.ic  a012.sh  a1.ic  a1.is  a1.sh  aa1w.ic  aa4a.ic  aa4b.ic  aa4c1.ic  aa4d.ic  aa4g.ic  aa4s.ic  aa4sn.ic  aa4y.ic  aa4z3.ic  aa4z4.ic  aa4z5.ic  alex10.ic  bar1.ic  bar1.sh  bar2.sh  bar3.sh  bara.ica  barb.ica  barc.ica  barfx.ic  biterr.ic  c12w.ic  dasgnq.ic  demo.sh  h.ica  h0.ica  h1.ica  h2.ica  h3.ica  h5.ica  h6.ica  h7.ica  h8.ica  (+32 more)
src/Test0/ORG/: CppComment.c  CppComment.ic  CppComment.ini  CppComment.lst  a0.c  a0.ini  a0.lst  a1.c  a1.ini  a1.lst  aa1w.c  aa1w.ini  aa1w.lst  aa4a.c  aa4a.lst  aa4b.c  aa4b.ini  aa4b.lst  aa4c.c  aa4c.ic  aa4c.ini  aa4c.lst  aa4c1.c  aa4c1.ini  aa4c1.lst  aa4d.c  aa4d.lst  aa4e.c  aa4e.ic  aa4e.ini  aa4e.lst  aa4f.c  aa4f.ic  aa4f.ini  aa4f.lst  aa4f1.c  aa4f1.ic  aa4f1.ini  aa4f1.lst  aa4g.c  (+290 more)
src/Test0/STRICT/: a0.c  a0.ic  (+345 more)
src/tcpcomm/: tcpcomm.go
(+18 files in other folders)
