dnl Process this file with autoconf to produce a configure script.
dnl $Id: configure.in,v 1.4 2005/02/01 16:37:44 jw Exp $
AC_INIT(cexe.h)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_LEX
AC_PROG_YACC
AC_PROG_CC
dnl added to produce install stuff - CHANGE from autoscan John Wulff
AC_PROG_INSTALL

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(sys/time.h termios.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(gettimeofday select socket)

AC_OUTPUT(Makefile)
